cr2w editor navigation

--- a/WolvenKit/Views/Editor/Basic/ProjectExplorerView.xaml
+++ b/WolvenKit/Views/Editor/Basic/ProjectExplorerView.xaml
@@ -57,7 +57,8 @@
                                AllowResizingColumns="False"
                                AllowFiltering="True"
                                AllowEditing="False"
-                               
+
+                               SelectionChanged="TreeGrid_OnSelectionChanged"
                                
         >
             <ei:Interaction.Triggers>
