--- a/WolvenKit/Views/Editor/Basic/PropertiesView.xaml
+++ b/WolvenKit/Views/Editor/Basic/PropertiesView.xaml
@@ -260,7 +260,7 @@
                          BorderBrush="{DynamicResource MahApps.Brushes.Accent3}"
                          BorderThickness="2,0,2,0"
                          Style="{StaticResource BorderTipPrimary}"
-                         Visibility="{Binding FileSystemInfo.Name, Converter={StaticResource String2VisibilityConverter}}"
+                         Visibility="{Binding Name, Converter={StaticResource String2VisibilityConverter}}"
                          >
                             <StackPanel Orientation="Horizontal">
 
@@ -268,7 +268,7 @@
                                 <hc:Shield
                                  Margin="10,0,0,0"
                                  FontSize="10"
-                                 Status="{Binding FileSystemInfo.Name}"
+                                 Status="{Binding Name}"
                                  Subject=":"
                                  Color="{DynamicResource MahApps.Brushes.Accent3}"
                                  />
@@ -284,86 +284,14 @@
                          BorderBrush="{DynamicResource MahApps.Brushes.Accent3}"
                          BorderThickness="2,0,2,0"
                          Style="{StaticResource BorderTipPrimary}"
-                         Visibility="{Binding FileSystemInfo.Extension, Converter={StaticResource String2VisibilityConverter}}"
+                         Visibility="{Binding Extension, Converter={StaticResource String2VisibilityConverter}}"
                          >
                             <StackPanel Orientation="Horizontal">
                                 <TextBlock Text="Extension" />
                                 <hc:Shield
                                  Margin="10,0,0,0"
                                  FontSize="10"
-                                 Status="{Binding FileSystemInfo.Extension}"
-                                 Subject=":"
-                                 Color="{DynamicResource MahApps.Brushes.Accent3}"
-                                 />
-                            </StackPanel>
-                        </Border>
-
-
-                        <Border
-                         Margin="3,3,3,3"
-                         Padding="0"
-                         HorizontalAlignment="Stretch"
-                         Background="Transparent"
-                         BorderBrush="{DynamicResource MahApps.Brushes.Accent3}"
-                         BorderThickness="2,0,2,0"
-                         Style="{StaticResource BorderTipPrimary}"
-                         Visibility="{Binding FileSystemInfo.CreationTime, Converter={StaticResource Object2VisibilityConverter}}"
-                         >
-                            <StackPanel Orientation="Horizontal">
-
-                                <TextBlock Text="Created at" />
-                                <hc:Shield
-                                 Margin="10,0,0,0"
-                                 FontSize="10"
-                                 Status="{Binding FileSystemInfo.CreationTime}"
-                                 Subject=":"
-                                 Color="{DynamicResource MahApps.Brushes.Accent3}"
-                                 />
-                            </StackPanel>
-                        </Border>
-
-
-                        <Border
-                         Margin="3,3,3,3"
-                         Padding="0"
-                         HorizontalAlignment="Stretch"
-                         Background="Transparent"
-                         BorderBrush="{DynamicResource MahApps.Brushes.Accent3}"
-                         BorderThickness="2,0,2,0"
-                         Style="{StaticResource BorderTipPrimary}"
-                         Visibility="{Binding FileSystemInfo.LastWriteTime, Converter={StaticResource Object2VisibilityConverter}}"
-                         >
-                            <StackPanel Orientation="Horizontal">
-
-                                <TextBlock Text="Last Modified" />
-                                <hc:Shield
-                                 Margin="10,0,0,0"
-                                 FontSize="10"
-                                 Status="{Binding FileSystemInfo.LastWriteTime}"
-                                 Subject=":"
-                                 Color="{DynamicResource MahApps.Brushes.Accent3}"
-                                 />
-                            </StackPanel>
-                        </Border>
-
-
-                        <Border
-                         Margin="3,3,3,3"
-                         Padding="0"
-                         HorizontalAlignment="Stretch"
-                         Background="Transparent"
-                         BorderBrush="{DynamicResource MahApps.Brushes.Accent3}"
-                         BorderThickness="2,0,2,0"
-                         Style="{StaticResource BorderTipPrimary}"
-                         Visibility="{Binding FileSystemInfo.LastAccessTime, Converter={StaticResource Object2VisibilityConverter}}"
-                         >
-                            <StackPanel Orientation="Horizontal">
-
-                                <TextBlock Text="Last Accessed" />
-                                <hc:Shield
-                                 Margin="10,0,0,0"
-                                 FontSize="10"
-                                 Status="{Binding FileSystemInfo.LastAccessTime}"
+                                 Status="{Binding Extension}"
                                  Subject=":"
                                  Color="{DynamicResource MahApps.Brushes.Accent3}"
                                  />
