--- a/WolvenKit/Views/Editor/Documents/DocumentView.xaml
+++ b/WolvenKit/Views/Editor/Documents/DocumentView.xaml
@@ -1,22 +1,22 @@
 <catel:UserControl
+ x:Class="WolvenKit.Views.Editor.DocumentView"
  xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
  xmlns:catel="http://schemas.catelproject.com"
  xmlns:cmodel="clr-namespace:WolvenKit.ViewModels.Shell;assembly=WolvenKit.App"
  xmlns:converters="clr-namespace:WolvenKit.Functionality.Converters;assembly=WolvenKit.App"
+ xmlns:converters1="clr-namespace:WolvenKit.Functionality.Converters"
  xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
  xmlns:editor="clr-namespace:WolvenKit.ViewModels.Editor;assembly=WolvenKit.App"
  xmlns:ei="http://schemas.microsoft.com/xaml/behaviors"
  xmlns:hc="https://handyorg.github.io/handycontrol"
  xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
+ xmlns:local="clr-namespace:WolvenKit.Views.Editor"
  xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
  xmlns:o="http://schemas.microsoft.com/winfx/2006/xaml/presentation/options"
  xmlns:pu="clr-namespace:Panuon.UI.Silver;assembly=Panuon.UI.Silver"
  xmlns:syncfusion="http://schemas.syncfusion.com/wpf"
  xmlns:templates="clr-namespace:WolvenKit.Views.Templates"
- xmlns:local="clr-namespace:WolvenKit.Views.Editor" 
- xmlns:converters1="clr-namespace:WolvenKit.Functionality.Converters"
- x:Class="WolvenKit.Views.Editor.DocumentView"
  d:DataContext="{d:DesignInstance Type={x:Type editor:DocumentViewModel}}"
  d:DesignHeight="450"
  d:DesignWidth="800"
@@ -283,22 +283,31 @@
                             <Grid x:Name="CHUNKSVISIBILITY">
                                 <syncfusion:SfTreeGrid
                                  x:Name="TreeView"
-                                 ItemsSource="{Binding Chunks}"
-                                 Style="{DynamicResource TreeView}"
-                                 SelectedItem="{Binding SelectedChunk}"
-                                 ChildPropertyName="Children"
-
-                                 AutoGenerateColumns="False"
-                                 ColumnSizer="SizeToCells"
-                                 AutoExpandMode="RootNodesExpanded"
-
-                                 AllowResizingColumns="False"
-                                 AllowFiltering="True"
                                  AllowEditing="False"
-                                >
+                                 AllowFiltering="True"
+                                 AllowResizingColumns="False"
+                                 AutoExpandMode="RootNodesExpanded"
+                                 AutoGenerateColumns="False"
+                                 ChildPropertyName="Children"
+                                 ColumnSizer="SizeToCells"
+                                 ItemsSource="{Binding Chunks}"
+                                 SelectedItem="{Binding SelectedChunk}"
+                                 Style="{DynamicResource SyncfusionSfTreeGridStyle}"
+                                 >
+                                    <syncfusion:SfTreeGrid.Resources>
+                                        <Style TargetType="syncfusion:TreeGridCell">
+                                            <Setter Property="BorderBrush" Value="Transparent" />
+                                            <Setter Property="BorderThickness" Value="0" />
+                                        </Style>
+                                        <Style TargetType="syncfusion:TreeGridExpanderCell">
+                                            <Setter Property="BorderBrush" Value="Transparent" />
+                                            <Setter Property="BorderThickness" Value="0" />
+                                        </Style>
+                                        <converters1:ExtensionToBitmapConverter x:Key="ExtensionToBmp" />
 
+                                    </syncfusion:SfTreeGrid.Resources>
                                     <syncfusion:SfTreeGrid.Columns>
-                                        <syncfusion:TreeGridTextColumn MappingName="Name" HeaderText="Chunks"/>
+                                        <syncfusion:TreeGridTextColumn HeaderText="Chunks" MappingName="Name" />
                                     </syncfusion:SfTreeGrid.Columns>
 
 
@@ -307,8 +316,11 @@
                             </Grid>
 
                             <Grid x:Name="IMPORTSVISISBILITY" Visibility="Collapsed">
-                                <ListView Margin="20" ItemsSource="{Binding Imports}"
-                                          SelectedItem="{Binding SelectedImport}">
+                                <ListView
+                                 Margin="20"
+                                 ItemsSource="{Binding Imports}"
+                                 SelectedItem="{Binding SelectedImport}"
+                                 >
 
                                     <ListView.View>
                                         <GridView>
@@ -318,9 +330,7 @@
 
                                     <hc:Interaction.Triggers>
                                         <hc:EventTrigger EventName="MouseDoubleClick">
-                                            <hc:EventToCommand Command="{Binding OpenImportCommand }"
-                                                               CommandParameter="{Binding SelectedImport}"
-                                            />
+                                            <hc:EventToCommand Command="{Binding OpenImportCommand}" CommandParameter="{Binding SelectedImport}" />
                                         </hc:EventTrigger>
                                     </hc:Interaction.Triggers>
                                 </ListView>
@@ -331,8 +341,7 @@
                                 <ListView ItemsSource="{Binding Buffers}">
                                     <hc:Interaction.Triggers>
                                         <hc:EventTrigger EventName="MouseDoubleClick">
-                                            <hc:EventToCommand Command="{Binding OpenBufferCommand}"
-                                                               PassEventArgsToCommand="True" />
+                                            <hc:EventToCommand Command="{Binding OpenBufferCommand}" PassEventArgsToCommand="True" />
                                         </hc:EventTrigger>
                                     </hc:Interaction.Triggers>
 
@@ -399,7 +408,6 @@
                          AutoExpandMode="RootNodesExpanded"
                          AutoGenerateColumns="False"
                          ChildPropertyName="Children"
-                            
                          ColumnSizer="Star"
                          ItemsSource="{Binding SelectedChunk.ChildrenProperties}"
                          >
@@ -438,25 +446,27 @@
 
             </syncfusion:SfNavigationDrawer.ContentView>
 
-            <syncfusion:NavigationItem x:Name="NavigationItemChunks"
-                                       Header="Chunks"
-                                       ToolTip="Chunks"
-                                       IsExpanded="False"
-                                       IsSelected="True"
-                                       MouseLeftButtonDown="NavigationItem_MouseLeftButtonDown"
-            >
+            <syncfusion:NavigationItem
+             x:Name="NavigationItemChunks"
+             Header="Chunks"
+             IsExpanded="False"
+             IsSelected="True"
+             MouseLeftButtonDown="NavigationItem_MouseLeftButtonDown"
+             ToolTip="Chunks"
+             >
                 <syncfusion:NavigationItem.Icon>
                     <iconPacks:PackIconVaadinIcons Margin="10,5,5,5" Kind="Cubes" />
                 </syncfusion:NavigationItem.Icon>
             </syncfusion:NavigationItem>
 
-            <syncfusion:NavigationItem x:Name="NavigationItemImports"
-                                       Header="{Binding}"
-                                       ToolTip="Imports"
-                                       IsExpanded="False"
-                                       IsSelected="False"
-                                       Command="{Binding ViewImportsCommand}"
-            >
+            <syncfusion:NavigationItem
+             x:Name="NavigationItemImports"
+             Command="{Binding ViewImportsCommand}"
+             Header="{Binding}"
+             IsExpanded="False"
+             IsSelected="False"
+             ToolTip="Imports"
+             >
                 <syncfusion:NavigationItem.Icon>
                     <iconPacks:PackIconMaterialDesign Margin="10,5,5,5" Kind="ImportExport" />
                 </syncfusion:NavigationItem.Icon>
@@ -464,11 +474,11 @@
 
             <syncfusion:NavigationItem
              Header="Buffers"
-             ToolTip="Buffers"
              IsExpanded="False"
              IsSelected="False"
              MouseLeftButtonDown="NavigationItem_MouseLeftButtonDown_2"
-            >
+             ToolTip="Buffers"
+             >
                 <syncfusion:NavigationItem.Icon>
                     <iconPacks:PackIconMaterial Margin="10,5,5,5" Kind="Buffer" />
                 </syncfusion:NavigationItem.Icon>
@@ -476,10 +486,10 @@
 
             <syncfusion:NavigationItem
              Header="Editors"
-             ToolTip="Editors"
              IsExpanded="False"
              IsSelected="False"
              MouseLeftButtonDown="NavigationItem_MouseLeftButtonDown_3"
+             ToolTip="Editors"
              >
                 <syncfusion:NavigationItem.Icon>
                     <iconPacks:PackIconMaterial Margin="10,5,5,5" Kind="BriefcaseEditOutline" />
