--- a/WolvenKit/Views/Shell/MainView.xaml
+++ b/WolvenKit/Views/Shell/MainView.xaml
@@ -10,6 +10,7 @@
  xmlns:editor="clr-namespace:WolvenKit.Views.Editor"
  xmlns:importertool1="clr-namespace:WolvenKit.Views.Editor"
  xmlns:o="http://schemas.microsoft.com/winfx/2006/xaml/presentation/options"
+ xmlns:syncfusion="http://schemas.syncfusion.com/wpf"
  xmlns:views1="clr-namespace:WolvenKit.Views.Editor"
  xmlns:visualeditorz="clr-namespace:WolvenKit.Views.Editor.VisualEditor"
  IsVisibleChanged="UserControl_IsVisibleChanged_1"
@@ -71,14 +72,14 @@
 
                 <ad:PanesTemplateSelector>
 
-                    <!--  DocumentView  -->
+                    <!--  DocumentView
                     <ad:PanesTemplateSelector.FileViewTemplate>
                         <DataTemplate>
                             <editor:DocumentView />
                         </DataTemplate>
                     </ad:PanesTemplateSelector.FileViewTemplate>
 
-                    <!--  LogView  -->
+                      LogView-->
                     <ad:PanesTemplateSelector.PropertiesTemplate>
                         <DataTemplate>
                             <views1:PropertiesView />
@@ -261,7 +262,18 @@
 
 
 
+        <Grid>
+            <syncfusion:DockingManager x:Name="dockingManager">
+                <ContentControl x:Name="SolutionExplorer">
+                    <editor:DocumentView />
 
+                </ContentControl>
+                <ContentControl x:Name="ToolBox" />
+                <ContentControl x:Name="Properties" />
+                <ContentControl x:Name="Output" />
+                <ContentControl x:Name="StartPage" />
+            </syncfusion:DockingManager>
+        </Grid>
 
 
 
