fix wkit startup
- enabled error logging in LogView

--- a/WolvenKit/Views/Editor/Basic/LogView.xaml
+++ b/WolvenKit/Views/Editor/Basic/LogView.xaml
@@ -49,7 +49,7 @@
          InfoMessageBrush="LightGray"
          ScrollMode="AutoScrollPriority"
          ShowDebug="False"
-         ShowError="False"
+         ShowError="True"
          ShowInfo="True"
          ShowMultilineMessagesExpanded="True"
          ShowWarning="True"
