--- a/WolvenKit/Views/Templates/EnumTemplateView.xaml
+++ b/WolvenKit/Views/Templates/EnumTemplateView.xaml
@@ -1,21 +1,25 @@
-<UserControl x:Class="WolvenKit.Views.Templates.EnumTemplateView"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:WolvenKit.Views.Templates"
-             mc:Ignorable="d" 
-             d:DesignHeight="200" d:DesignWidth="400"
-             d:DataContext="{d:DesignInstance Type={x:Type local:EnumTemplateView}}"
-            
-             >
+<UserControl
+ x:Class="WolvenKit.Views.Templates.EnumTemplateView"
+ xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+ xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+ xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+ xmlns:local="clr-namespace:WolvenKit.Views.Templates"
+ xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+ d:DataContext="{d:DesignInstance Type={x:Type local:EnumTemplateView}}"
+ d:DesignHeight="200"
+ d:DesignWidth="400"
+ mc:Ignorable="d"
+ >
 
     <Grid>
-        <ComboBox x:Name="ComboBox"
-                  SelectedItem="{Binding SelectedItem}"
-                  ItemsSource="{Binding BindingCollection, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                  SelectionChanged="ComboBox_OnSelectionChanged"
-                  DataContext="{Binding Mode=OneWay, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:EnumTemplateView}}}"
-                  />
+        <ComboBox
+         x:Name="ComboBox"
+         Background="{DynamicResource MahApps.Brushes.Accent3}"
+         DataContext="{Binding Mode=OneWay, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:EnumTemplateView}}}"
+         ItemsSource="{Binding BindingCollection, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+         SelectedItem="{Binding SelectedItem}"
+         SelectionChanged="ComboBox_OnSelectionChanged"
+         Style="{DynamicResource MahApps.Styles.ComboBox.DataGrid.Editing}"
+         />
     </Grid>
 </UserControl>
